--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <i class="fas fa-map-signs"></i>
              </div>
              <div class="data">
-               RR Sarani Rd, Siliguri<br /> WestBengal
+               Siliguri<br /> WestBengal
              </div>
            </li>
            <li>
